# dcs-fcs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build_windows.bat  config.ini  install_fast_export.bat  install_fast_export.ps1
lua/: ah64d_auto_rudder_export.lua
src/: app.cpp  app.h  config.cpp  config.h  dcs_bios_protocol.cpp  dcs_bios_protocol.h  dcs_bios_refs.cpp  dcs_bios_refs.h  dcs_bios_state.cpp  dcs_bios_state.h  logger.cpp  logger.h  main.cpp  tune_session.cpp  tune_session.h  yaw_damper.cpp  yaw_damper.h
src/windows/: dcs_bios_udp_client.cpp  dcs_bios_udp_client.h  directinput_axis.cpp  directinput_axis.h  fast_export_udp_client.cpp  fast_export_udp_client.h  hotkey.cpp  hotkey.h  vjoy_device.cpp  vjoy_device.h
tests/: test_main.cpp
